fix grid gap

--- a/src/style.css
+++ b/src/style.css
@@ -93,8 +93,7 @@ img {
 .grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    column-gap: 30px;
-    row-gap: 20px;
+    gap: 30px;
 }
 
 @media (max-width: 992px) {
